Hausa, CL Stellar!

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -1,7 +1,530 @@
 import { Meta } from "@storybook/blocks";
 
-<Meta title="Document" />
+<Meta title="CL Stellar" />
 
-<section>
-  <h1>Document</h1>
-</section>
+<main id="cl-doc">
+  <h1 class="mb-8 font-semibold text-4xl">CL Stellar</h1>
+  <section>
+    <h2 class="font-semibold text-2xl border-0">❖ Primitive Colors</h2>
+    <div class="grid gap-6 mt-6">
+      <details open>
+        <summary class="font-semibold text-lg border-0">Neutral</summary>
+        <ul class="flex flex-wrap gap-4 mt-2">
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-neutral-50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              0
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-50 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              50
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-100 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              100
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-150 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              150
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-200 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              200
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-300 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              300
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-400 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              400
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-500 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              500
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-600 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              600
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-700 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              700
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-800 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              800
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-900 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              900
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-950 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              950
+            </div>
+          </li>
+        </ul>
+      </details>
+      <details open>
+        <summary class="font-semibold text-lg border-0">Red</summary>
+        <ul class="flex flex-wrap gap-4 mt-2">
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-red-50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              0
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-50 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              50
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-100 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              100
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-150 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              150
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-200 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              200
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-300 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              300
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-400 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              400
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-500 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              500
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-600 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              600
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-700 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              700
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-800 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              800
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-900 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              900
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-950 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              950
+            </div>
+          </li>
+        </ul>
+      </details>
+      <details open>
+        <summary class="font-semibold text-lg border-0">Orange</summary>
+        <ul class="flex flex-wrap gap-4 mt-2">
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-orange-50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              0
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-50 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              50
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-100 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              100
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-150 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              150
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-200 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              200
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-300 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              300
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-400 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              400
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-500 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              500
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-600 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              600
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-700 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              700
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-800 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              800
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-900 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              900
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-950 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              950
+            </div>
+          </li>
+        </ul>
+      </details>
+      <details open>
+        <summary class="font-semibold text-lg border-0">Yellow</summary>
+        <ul class="flex flex-wrap gap-4 mt-2">
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-yellow-50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              0
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-50 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              50
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-100 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              100
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-150 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              150
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-200 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              200
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-300 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              300
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-400 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              400
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-500 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              500
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-600 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              600
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-700 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              700
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-800 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              800
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-900 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              900
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-950 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              950
+            </div>
+          </li>
+        </ul>
+      </details>
+      <details open>
+        <summary class="font-semibold text-lg border-0">Green</summary>
+        <ul class="flex flex-wrap gap-4 mt-2">
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-green-50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              0
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-50 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              50
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-100 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              100
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-150 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              150
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-200 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              200
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-300 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              300
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-400 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              400
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-500 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              500
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-600 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              600
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-700 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              700
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-800 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              800
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-900 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              900
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-950 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              950
+            </div>
+          </li>
+        </ul>
+      </details>
+      <details open>
+        <summary class="font-semibold text-lg border-0">Blue</summary>
+        <ul class="flex flex-wrap gap-4 mt-2">
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-blue-50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              0
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-50 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              50
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-100 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              100
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-150 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              150
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-200 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              200
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-300 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              300
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-400 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              400
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-500 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              500
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-600 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              600
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-700 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              700
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-800 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              800
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-900 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              900
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-950 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              950
+            </div>
+          </li>
+        </ul>
+      </details>
+      <details open>
+        <summary class="font-semibold text-lg border-0">Purple</summary>
+        <ul class="flex flex-wrap gap-4 mt-2">
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-purple-50">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              0
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-50 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              50
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-100 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              100
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-150 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              150
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-200 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              200
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-300 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
+              300
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-400 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              400
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-500 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              500
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-600 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              600
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-700 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              700
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-800 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              800
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-900 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              900
+            </div>
+          </li>
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-950 transition-transform hover:scale-110 hover:shadow-md">
+            <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-white">
+              950
+            </div>
+          </li>
+        </ul>
+      </details>
+    </div>
+  </section>
+</main>
+<style>
+  {`
+    #cl-doc {
+      // Reset
+      *:where(:not(iframe, canvas, img, svg, video):not(svg *)) {
+        all: unset;
+        display: revert;
+      }
+      *,*::before,*::after {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      ol,ul,li {
+        list-style: none;
+      }
+      img {
+        max-width: 100%;
+      }
+      table {
+        border-collapse: collapse;
+      }
+      p {
+        color: inherit;
+      }
+    }
+`}
+</style>
