Fix: remove unnecessary border and fix color in each first-item

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -10,7 +10,7 @@ import { Meta } from "@storybook/blocks";
       <details open>
         <summary class="font-semibold text-lg border-0">Neutral</summary>
         <ul class="flex flex-wrap gap-4 mt-2">
-          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-neutral-50">
+          <li class="relative w-8 h-8 rounded-full bg-cl-neutral-0 transition-transform hover:scale-110 hover:shadow-md border border-cl-neutral-50">
             <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
               0
             </div>
@@ -80,7 +80,7 @@ import { Meta } from "@storybook/blocks";
       <details open>
         <summary class="font-semibold text-lg border-0">Red</summary>
         <ul class="flex flex-wrap gap-4 mt-2">
-          <li class="relative w-8 h-8 rounded-full bg-cl-red-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-red-50">
+          <li class="relative w-8 h-8 rounded-full bg-cl-red-0 transition-transform hover:scale-110 hover:shadow-md">
             <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
               0
             </div>
@@ -150,7 +150,7 @@ import { Meta } from "@storybook/blocks";
       <details open>
         <summary class="font-semibold text-lg border-0">Orange</summary>
         <ul class="flex flex-wrap gap-4 mt-2">
-          <li class="relative w-8 h-8 rounded-full bg-cl-orange-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-orange-50">
+          <li class="relative w-8 h-8 rounded-full bg-cl-orange-0 transition-transform hover:scale-110 hover:shadow-md">
             <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
               0
             </div>
@@ -220,7 +220,7 @@ import { Meta } from "@storybook/blocks";
       <details open>
         <summary class="font-semibold text-lg border-0">Yellow</summary>
         <ul class="flex flex-wrap gap-4 mt-2">
-          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-yellow-50">
+          <li class="relative w-8 h-8 rounded-full bg-cl-yellow-0 transition-transform hover:scale-110 hover:shadow-md">
             <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
               0
             </div>
@@ -290,7 +290,7 @@ import { Meta } from "@storybook/blocks";
       <details open>
         <summary class="font-semibold text-lg border-0">Green</summary>
         <ul class="flex flex-wrap gap-4 mt-2">
-          <li class="relative w-8 h-8 rounded-full bg-cl-green-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-green-50">
+          <li class="relative w-8 h-8 rounded-full bg-cl-green-0 transition-transform hover:scale-110 hover:shadow-md">
             <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
               0
             </div>
@@ -360,7 +360,7 @@ import { Meta } from "@storybook/blocks";
       <details open>
         <summary class="font-semibold text-lg border-0">Blue</summary>
         <ul class="flex flex-wrap gap-4 mt-2">
-          <li class="relative w-8 h-8 rounded-full bg-cl-blue-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-blue-50">
+          <li class="relative w-8 h-8 rounded-full bg-cl-blue-0 transition-transform hover:scale-110 hover:shadow-md">
             <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
               0
             </div>
@@ -430,7 +430,7 @@ import { Meta } from "@storybook/blocks";
       <details open>
         <summary class="font-semibold text-lg border-0">Purple</summary>
         <ul class="flex flex-wrap gap-4 mt-2">
-          <li class="relative w-8 h-8 rounded-full bg-cl-purple-50 transition-transform hover:scale-110 hover:shadow-md border border--cl-purple-50">
+          <li class="relative w-8 h-8 rounded-full bg-cl-purple-0 transition-transform hover:scale-110 hover:shadow-md">
             <div class="absolute inset-0 flex items-center justify-center text-xs opacity-30 transition-opacity hover:opacity-100 text-black">
               0
             </div>
